applocationinfra/showcase/showcase_cfn_database.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description" : "Provision Resource dependacies for DMS (Currently it is provisioning RDS instance only)",

  "Parameters": {
    "DatabaseUser": {
      "Default": "admin",
      "NoEcho": "True",
      "Type": "String",
      "Description" : "Database Account user name",
      "MinLength": "1",
      "MaxLength": "16",
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*",
      "ConstraintDescription": "must begin with a letter and contain only alphanumeric characters."

    },
    "DatabasePassword": {
          "Default": "0bee082a464",
      "NoEcho": "true",
      "Type": "String",
      "Description": "Database admin account password",
      "MinLength": "1",
      "MaxLength": "41",
      "AllowedPattern": "[a-zA-Z0-9]*",
      "ConstraintDescription": "must contain only alphanumeric characters."
    },
    "DatabaseName": {
      "Description": "The name of the database",
      "Type": "String",
      "Default": "dmsdb"
    },
    "InstanceSecurityGroup" : {
      "Description" : "A VPC Security Group ID that has ingress access to a NAT instance in the VPC. EB instances will be launched into this group.",
      "Type": "String"
    },
    "VPCId" : {
      "Description" : "A VPC ID.",
      "Type": "String"
    },
    "PublicSubnet1" : {
      "Description" : "A public VPC subnet ID.",
      "Type": "String"
    },
    "PublicSubnet2" : {
      "Description" : "A public VPC subnet ID.",
      "Type": "String"
    }

  },

  "Resources": {
    "DBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow the Elastic Beanstalk instances to access the RDS database",
        "VpcId": {
          "Ref": "VPCId"
        },
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "CidrIp": "0.0.0.0/0"
        }],
        "SecurityGroupEgress": [{
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "CidrIp": "0.0.0.0/0"
        }]
      }
    },

    "DBSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "RDS DB Subnet group",
        "SubnetIds": [{
          "Ref": "PublicSubnet1"
        },{
          "Ref": "PublicSubnet2"
        }]
      }
    },

    "Database": {
      "Type" : "AWS::RDS::DBInstance",
      "Properties": {
        "Engine": "MariaDB",
        "DBName": {
          "Ref" : "DatabaseName"
        },
        "DBInstanceClass": "db.t2.micro",
        "AllocatedStorage": "5",
        "VPCSecurityGroups": [{
          "Ref": "DBSecurityGroup"
        }],
        "DBSubnetGroupName": {
          "Ref": "DBSubnetGroup"
        },
        "MasterUsername": {
          "Ref" : "DatabaseUser"
        },
        "MasterUserPassword": {
          "Ref": "DatabasePassword"
        }
      }
    }
  },
  "Outputs" : {
    "InstanceSecurityGroup": {
      "Value": {"Ref": "InstanceSecurityGroup"}
    },
    "RdsDbId": {
      "Value" : { "Ref" : "Database" }
    },
    "DatabaseUser":{
      "Value": { "Ref" : "DatabaseUser"}
    },
    "DatabasePassword": {
      "Value": { "Ref" : "DatabasePassword" }
    }

  }

}
